# presurfer-smk

./: LICENSE  README.md  Snakefile  pipeline_description.json  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: deploy.yml  testing.yml
config/: snakebids.yml
presurfer/: run.py
presurfer/workflow/: Snakefile
presurfer_smk/: run.py
presurfer_smk/config/: snakebids.yml
presurfer_smk/workflow/: Snakefile
scripts/: presurfer_spmdocker.m.template
workflow/: Snakefile
workflow/script_templates/: presurfer_spmdocker.m.template
