[tool.poetry]
name = "presurfer_smk"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
snakebids = "^0.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
presurfer = "presurfer_smk.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



