[tool.poetry]
name = "presurfer"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
snakebids = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
snakefmt = "^0.6.0"
poethepoet = "^0.13.1"


[tool.poetry.scripts]
presurfer = "presurfer.run:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]
quality_check = { shell = "isort presurfer/*.py -c && black presurfer --check && snakefmt presurfer --check" }
quality_fix = { shell = "isort presurfer/*.py && black presurfer  && snakefmt presurfer" }

[tool.isort]
profile = "black"
multi_line_output = 3
